# sams-product-os

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  setup.sh
.claude/: settings.json
.claude/skills/daily-pulse/: SKILL.md
.claude/skills/daily-pulse/references/: output-format.md
.claude/skills/end-my-day/: SKILL.md
.claude/skills/process-backlog/: SKILL.md
.claude/skills/start-my-day/: SKILL.md
.claude/skills/view-tasks/: SKILL.md
.claude/skills/weekly-review/: SKILL.md
.claude/skills/weekly-update/: SKILL.md
.claude/skills/wrap-up/: SKILL.md
evals/: README.md  conftest.py  pyproject.toml  run_evals.py  test_llm_behavior.py  test_workflows.py
evals/fixtures/: goals.md
evals/fixtures/llm_scenarios/: backlog_processing.py
evals/fixtures/regressions/: _template.yaml
evals/fixtures/scenarios/: ambiguous_item.yaml  clear_item_goal_match.yaml  decision_journal.yaml  domain_learning_capture.yaml  duplicate_detection.yaml  mixed_backlog.yaml  orphan_task.yaml  p0_cap_exceeded.yaml  system_review.yaml  thought_partner.yaml
initiatives/: AGENTS.md
knowledge/: AGENTS.md  README.md
meetings/: AGENTS.md
projects/: AGENTS.md
tasks/: AGENTS.md
templates/: about-me-template.md  active-template.md  archive-template.md  backlog-template.md  company-overview-template.md  goals-template.md  project-brief-template.md  tasks-template.md
tools/mcp-servers/: README.md
tools/mcp-servers/task-manager/: README.md  server.py  test_server.py
