[project]
name = "sams-product-os"
version = "0.1.0"
description = "AI powered personal operating system - how I organize my PM workspace"
readme = "README.md"
authors = [
    { name = "Sam Kawsarani" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
evals = [
    "pytest>=7.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
]
all = [
    "sams-product-os[evals,dev]",
]

[tool.setuptools.packages.find]
include = ["tools*", "evals*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
