[project]
name = "sams-product-os-evals"
version = "0.1.0"
description = "AI agent evals for Sams Product OS"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]
